feat: add worksheet layout

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource/roboto": "^5.0.13",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
+    "@mui/x-tree-view": "^7.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
