--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
     "@mui/x-tree-view": "^7.7.1",
+    "@reduxjs/toolkit": "^2.2.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.8",
@@ -30,6 +32,7 @@
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
     "prettier": "^3.3.2",
+    "react-refresh": "^0.14.2",
     "react-refresh-typescript": "^2.0.7",
     "sass": "^1.55.0",
     "sass-loader": "^14.0.0",
