feat: setup rows conditional rendering and add row editing

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.15.20",
     "@mui/x-tree-view": "^7.7.1",
     "@reduxjs/toolkit": "^2.2.5",
+    "nanoid": "^5.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2"
