--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^6.9.1",
+    "dotenv": "^16.4.5",
+    "dotenv-webpack": "^8.1.0",
     "gh-pages": "^6.1.1",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
